--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nestjs-blog-api",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Advanced Blog REST API with NestJS",
+  "author": "Tia Widi",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
