Setup database.module

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DATABASE_HOST=postgres
-DATABASE_PORT=5432
+DATABASE_HOST=localhost
+DATABASE_PORT=5431
 DATABASE_USER=nestjs_blog_api_user
 DATABASE_PASSWORD=nestjs_blog_api_password
 DATABASE_NAME=nestjs_blog_api_db
